Dark mode fixes for Clippings Sidebar (part of issue #466)

--- a/wx-src/pages/sidebar.css
+++ b/wx-src/pages/sidebar.css
@@ -45,10 +45,11 @@
 
 @media (prefers-color-scheme: dark) {
     :root {
-	--color-bkgd: #38383d;
+	--color-bkgd: #202023;
 	--color-default-text: #f9f9fa;
 	--color-disabled-text: rgba(249, 249, 250, 0.4);
 	--color-msgbars-bkgd: #38383d;
+	--color-main-toolbar-bkgd: #38383d;
 	--color-main-toolbar-text: #f9f9fa;
 	--color-toolbarbtn-hover-bkgd: #737373;
 	--color-toolbarbtn-active-bkgd: #b1b1b3;
